[tool.poetry]
name = "flask app"
version = "0.1.0"
description = ""
authors = ["Bilal Leadbitter <bleadbitter@bink.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Flask-RESTful = "^0.3.9"
pydantic = "^1.9.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
