[tool.poetry]
name = "flask-app"
version = "0.1.0"
description = ""
authors = ["Bilal Leadbitter <bleadbitter@bink.com>"]
readme = "README.md"
packages = [{include = "flask_app"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
